# amqpwrap

./: README.md  pyproject.toml
amqpwrap/: consumer.py  feeder.py  parameters.py
