[tool.poetry]
name = "amqpwrap"
version = "1.3.0"
description = ""
authors = ["Niels de Water <nielsdw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
